[package]
name = "poker-server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
jsonwebtoken = "8.1.0"
actix = "0.13.0"
actix-web = "4.1.0"
actix-web-actors = "4.1.0"
sfmt = "0.7.0"
x25519-dalek = "1.2.0"
getrandom = { version = "0.2.6", features = ["std"] }
rand = { version = "0.8.4", features = ["getrandom"] }
rand_core = "0.6.3"
byteorder = "1.4.3"
rayon = "1.5.3"
uuid = { version = "1.1.0", features = ["v4", "serde"] }
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = { version = "1.0.81", features = ["alloc"] }
playing-cards = { git = "https://github.com/Nydauron/playing-cards", branch = "poker-rank-types", features = ["poker"] }
